==> evrttn/4.0inch-display/1-Demo/Demo_STM32/Demo_4.0inch_Mega2560_NT35510_800x480_STM32F103RCT6_8&16BIT_IO_Simulation/HARDWARE/LCD/lcd.c <==
#include "lcd.h"
#include "stdlib.h"
#include "delay.h"

void LCD_WR_REG(u16 data)
{ 
   LCD_RS_CLR;     
	 #if LCD_USE8BIT_MODEL
	 LCD_write(data>>8);
	 LCD_write(data);	 
	 #else
	 LCD_write(data);
	 #endif
}

void LCD_WR_DATA(u16 data)
{
	 LCD_RS_SET;
	 #if LCD_USE8BIT_MODEL
	 LCD_write(0x00);
	 LCD_write(data);
	 #else
	 LCD_write(data);
	 #endif
}

void Lcd_WriteData_16Bit(u16 Data)
{	
   LCD_RS_SET; 
	 LCD_CS_CLR;
	 #if LCD_USE8BIT_MODEL
		DATAOUT(Data>>8);
		LCD_WR_CLR; 
		LCD_WR_SET;
		DATAOUT(Data);
		LCD_WR_CLR; 
		LCD_WR_SET;
	 #else
	 	DATAOUT(Data);
		LCD_WR_CLR; 
		LCD_WR_SET; 
	 #endif
	 LCD_CS_SET;
}

void LCD_Clear(u16 Color)
{
  unsigned int i;//,m;  
	LCD_SetWindows(0,0,lcddev.width-1,lcddev.height-1);
	LCD_RS_SET;
	LCD_CS_CLR;		 
	for(i=0;i<lcddev.height*lcddev.width;i++)
	{
	 #if LCD_USE8BIT_MODEL
		DATAOUT(Color>>8);
		LCD_WR_CLR; 
		LCD_WR_SET;
		DATAOUT(Color);
		LCD_WR_CLR; 
		LCD_WR_SET;
	 #else
	 	DATAOUT(Color);
		LCD_WR_CLR; 
		LCD_WR_SET; 
	 #endif
	}
	LCD_CS_SET;
}

void LCD_GPIOInit(void)
{
	GPIO_InitTypeDef  GPIO_InitStructure;
	      
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOC|RCC_APB2Periph_GPIOB|RCC_APB2Periph_AFIO,ENABLE);
	GPIO_PinRemapConfig(GPIO_Remap_SWJ_JTAGDisable , ENABLE);
	
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_7| GPIO_Pin_8| GPIO_Pin_9 | GPIO_Pin_6 | GPIO_Pin_4; //GPIOC10,6,7,8,9,4
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;   //推挽输出
	GPIO_Init(GPIOC, &GPIO_InitStructure);	
	GPIO_SetBits(GPIOC,GPIO_Pin_7|GPIO_Pin_8|GPIO_Pin_9|GPIO_Pin_6|GPIO_Pin_4);
	
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_All;	//  
	GPIO_Init(GPIOB, &GPIO_InitStructure); //GPIOB
	GPIO_SetBits(GPIOB,GPIO_Pin_All);	
}
